# TransactionService

./: .flake8  .flake8_tests  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 2024_08_19_1715-38a4c048bf99_add_all_models.py  2024_08_22_0547-2c4f2c146d27_create_tables_with_schema.py
helm/lebedev-transaction/: Chart.yaml  values.yaml
helm/lebedev-transaction/templates/: NOTES.txt  _helpers.tpl  db_configmap.yml  db_secret.yml  deployment.yaml  jaeger_configmap.yml  redis_configmap.yml  service.yaml
helm/lebedev-transaction/values/: test.yml
kuber/: configmap.yml  db_configmap.yml  db_secret.yml  deployment.yml  migration-job.yml  pod.yml  secret.yml  service.yml
redis/: redis.conf
src/app/: config.py  logic.py  main.py  middleware.py  models.py  utils.py
src/app/db/: db_helper.py  models.py
src/app/transaction_service/: schemas.py  urls.py  views.py
src/tests/: conftest.py  crud_for_test.py  test_logic.py
src/tests/integration/: conftest.py  test_logic.py  test_urls.py
src/tests/transaction_service/: conftest.py  test_transaction_service.py
src/tests/unit/: test_logic.py  test_models.py
src/tests/unit/db/: test_models.py
src/tests/unit/transaction_service/: conftest.py  test_schemas.py  test_views.py
src/tests/unit_tests/transaction_service/: conftest.py  test_transaction_service.py
