[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
black = "^24.4.2"
mypy = "^1.10.1"
coverage = "^7.5.4"
coverage-threshold = "^0.4.4"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ". src"
testpaths = ["src/tests"]

[tool.coverage.run]
command_line = "-m pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
